Issue #3012461 by partdigital, Niklan, mahtab_alam: Horizontal tab content is wrapped by detail border

--- a/formatters/tabs/horizontal-tabs.css
+++ b/formatters/tabs/horizontal-tabs.css
@@ -27,9 +27,10 @@
   border-left: 1px solid #dedede;
 }
 
-.horizontal-tabs-pane {
+.horizontal-tabs-panes .horizontal-tabs-pane {
   padding: 0 1em;
   border: 0;
+  background-color: unset;
 }
 
 .horizontal-tabs-pane > summary {
